# ogd-core

./: .gitignore  Adding_a_Game.md  AggregateConfig.py  BatchData.py  CITATION.cff  DataToCSV.py  DetectorConfig.py  DetectorMapConfig.py  Doxyfile  ExportManager.py  ExtractorConfig.py  ExtractorMapConfig.py  FeatureConfig.py  FeatureExporter.py  FeatureMapConfig.py  GameGeneratorsConfig.py  GameTable.py  GeneratorCollectionConfig.py  GeneratorConfig.py  InteratedConfig.py  IteratedConfig.py  LICENSE  Makefile  PerCountConfig.py  ProcManager.py  README.md  RTServer.py  RawManager.py  Request.py  SimRTServer.py  SubfeatureConfig.py  TestDriver.py  __init__.py  config.json.template  config.py.template  file_list.json  file_list.json.bak  get_stats.py  index.html  main.py  (+21 more)
.devcontainer/: devcontainer.json
.github/workflows/: CI_OGD.yml  CI_aqualab.yml  CI_bloom.yml  CI_core_utils.yml  CI_crystal.yml  CI_icecube.yml  CI_journalism.yml  CI_jowilder.yml  CI_jwilder.yml  CI_magnet.yml  (+74 more)
Lakeland Enumerators/: Lakeland Enumerators.json  produce_lakeland_enumerators.py
coding/: Code.py  Coder.py
config/: __init__.py  config.py.template
detectors/: CustomDetector.py.template  Detector.py  DetectorEvent.py  DetectorRegistry.py  __init__.py
doc/: Adding_a_Database.md  Adding_a_Feature.md  Adding_a_Game.md  Adding_a_Realtime_Model.md  Architecture.md  Lakeland Features.md  changelog_src.md
extractors/: ClassroomDetector.py  CrystalExtractor.py  EventExtractor.py  Extractor.py  ExtractorLoader.py  ExtractorRegistry.py  Feature.py  FeatureLoader.py  FeatureRegistry.py  JowilderExtractor.py  LakelandExtractor.py  LegacyExtractor.py  LegacyFeature.py  MagnetExtractor.py  PerLevelFeature.py  PlayerExtractor.py  PopulationExtractor.py  SecondOrderFeature.py  SessionExtractor.py  SessionFeature.py  WaveExtractor.py  __init__.py
feature_extractors/: ClassroomDetector.py  CrystalExtractor.py  Extractor.py  Feature.py  JowilderExtractor.py  LakelandExtractor.py  MagnetExtractor.py  WaveExtractor.py
features/: CustomFeature.py.template  Feature.py  FeatureData.py  FeatureLoader.py  FeatureRegistry.py  PerCountFeature.py  PerLevelFeature.py  SecondOrderFeature.py  SessionFeature.py  __init__.py
game_features/: WaveFeature.py
games/: __init__.py
interfaces/: BIGQUERY.json  BQFirebaseInterface.py  BigQueryCodingInterface.py  BigQueryInterface.py  CSVInterface.py  CodingInterface.py  DataInterface.py  FeatureInterface.py  Interface.py  MySQLInterface.py  __init__.py  setup.cfg
interfaces/coding/: CodingInterface.py
interfaces/events/: BQFirebaseInterface.py  BigQueryInterface.py  CSVInterface.py  EventInterface.py  MySQLInterface.py
interfaces/features/: FeatureInterface.py
interfaces/outerfaces/: DataOuterface.py  DatabaseOuterface.py  DebugOuterface.py  DictionaryOuterface.py  MySQLOuterface.py  TSVOuterface.py
interfaces/src/: BigQueryInterface.py  CSVInterface.py  DataInterface.py  MySQLInterface.py
jupyter/: Explore Data - Dot Plots.ipynb  Explore Data - Filter Data By Assessment and Export .ipynb  Explore Data - Get df from zipfile.ipynb  Explore Data - Visualize Per Level Features.ipynb  Explore Data - Visualize WPS per level.ipynb
managers/: DataManager.py  DumpManager.py  EventManager.py  EventProcessor.py  ExportManager.py  ExtractorManager.py  FeatureManager.py  FileManager.py  PopulationProcessor.py  ProcManager.py  RawManager.py  Request.py  SessionProcessor.py  __init__.py
models/: ActionsLastXSecondsModel.py  DeathCountModel.py  DeathPredModel.py  DeathThresholdModel.py  DiagonalFarmDetectorModel.py  FeatSeqPercent.py  FeatVelocity.py  FeatureModel.py  LAKELAND_models.json  Lakeland_featseq_velocity.py  LogisticModel.py  MapSummaryModel.py  Model.py  MoneyAccumulationModel.py  NthEventModel.py  PlayingTimeModel.py  PopulationModel.py  RecentPurchasesModel.py  SequenceModel.py  SimpleDeathPredictionModel.py  SimpleFarmAbandonmentModel.py  SingleFeatureModel.py  TimeSinceEventTypes.py  TimeSinceLastSaleModel.py  TownCompositionModel.py  TutorialProgressionModel.py  WAVES_models.json
ogd_requests/: Request.py  RequestResult.py  __init__.py
processors/: DetectorProcessor.py  EventExtractor.py  EventProcessor.py  ExtractorProcessor.py  FeatureProcessor.py  PlayerExtractor.py  PlayerProcessor.py  PopulationExtractor.py  PopulationProcessor.py  Processor.py  SessionExtractor.py  SessionProcessor.py  __init__.py
realtime/: ModelManager.py  RTServer.py  Request.py  SimRTServer.py
schemas/: Event.py  ExportMode.py  ExporterRange.py  ExtractionMode.py  FeatureData.py  GameSchema.py  IDMode.py  IterationMode.py  Request.py  RequestResult.py  Schema.py  TableSchema.py  WaveSchema.py  __init__.py  database_changelog_src.md
tests/: get_stats.py  get_stats_feat.py  helpers.py  t_config.json  t_utils.py  test_lakeland_models.py
toydata/: file_list.json
utils/: Logger.py  Readme.py  __init__.py  utils.py
websrc/: RTServer.js  realtime.css  realtime.js  realtime_old.js  realtime_test.js  scripts.js
(+1837 files in other folders)
