[metadata]
name = opengamedata-interfaces
version = 0.0.1
author = Luke Swanson
author_email = swansonl@cs.wisc.edu
description = Data Interfaces package for OpenGameData.
long_description = Data Interfaces package for OpenGameData.
url = https://github.com/opengamedata/opengamedata-core/tree/master/interfaces/
project_urls = 
    Bug Tracker = https://github.com/opengamedata/opengamedata-core/issues
classifiers =
    Programming Langauage :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find
python_requires = >= 3.6

[options.packages.find]
where = src